--- a/src/usr/lib/lua/luci/view/admin_quotas/spinner.htm
+++ b/src/usr/lib/lua/luci/view/admin_quotas/spinner.htm
@@ -7,7 +7,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="refresh" content="20; URL=<%=http.protocol.urldecode(http.formvalue('url'))%>" />
+<meta http-equiv="refresh" content="20; URL=<%=http.urldecode(http.formvalue('url'))%>" />
 <link rel="stylesheet" type="text/css" href="/res/sync.css" />
 </head>
 
